<resources>
    <string name="app_name">Store Management</string>

    <string name="login_title">Login</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="dashboard_title">Menú Principal</string>
    <string name="dashboard_clothingbystoreButton">Stock</string>
    <string name="dashboard_salesbystoreButton">Ventas por Local</string>
    <string name="clothingbystore_title">Stock por Local</string>

    <string name="salesbytype_title">Venta por tipo</string>


    <string name="fieldUser">Usuario</string>
    <string name="fieldPass">Contraseña</string>
    <string name="fieldMail">Ingrese su Email</string>
    <string name="loginButton">Ingresar</string>
    <string name="loginWelcome">Pantalla de login</string>
    <string name="hintUser">Ingresar usuario</string>
    <string name="hintPass">Ingresar contraseña</string>
    <string name="forgotPass">¿olvidaste la contraseña?,</string>
    <string name="clickHere">Has click aqui</string>
    <string name="recoverWindow">recuperacion de contraseña</string>
    <string name="showPass">Mostrar contraseña</string>
    <string name="optExit">SALIR</string>
    <string name="optClient">CLIENTES</string>
    <string name="optSales">VENTAS</string>
    <string name="optStock">STOCK</string>
    <string name="optExtra1">EXTRA 1</string>
    <string name="optExtra2">EXTRA 2</string>
    <string name="welcome">Bienvenido</string>


</resources>
